WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39057
Web Inspector: A disabled style property cannot be deleted
https://bugs.webkit.org/show_bug.cgi?id=39057
Summary
Web Inspector: A disabled style property cannot be deleted
Alexander Pavlov (apavlov)
Reported
2010-05-13 05:23:19 PDT
1. In some CSS rule (with 2 or more properties) in the Styles sidebar pane, disable a property 2. Delete the disabled property by clearing its edit-box, as usual 3. Disable another property in the same rule The property deleted in step 2 re-appears in a disabled state. The requirement of 2 or more properties in step 1 is not mandatory, it's there merely to manifest the issue in an easy way.
Attachments
[PATCH] Proposed fix.
(7.67 KB, patch)
2010-05-13 09:57 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Comments addressed.
(11.29 KB, patch)
2010-05-13 10:49 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-05-13 09:57:45 PDT
Created
attachment 55991
[details]
[PATCH] Proposed fix.
Yury Semikhatsky
Comment 2
2010-05-13 10:26:48 PDT
Comment on
attachment 55991
[details]
[PATCH] Proposed fix. LayoutTests/inspector/styles-disable-then-delete.html:37 + testController.runAfterPendingDispatches(frontend_deleteContainerStyle.bind(this, testController)); Can you pass __result as a parameter as well instead of creating a global __result? Also it's not clear what 'bind(this,' means in this context, should it be .bind(null, ?
Pavel Feldman
Comment 3
2010-05-13 10:49:15 PDT
Created
attachment 55996
[details]
[PATCH] Comments addressed.
Pavel Feldman
Comment 4
2010-05-13 12:24:27 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... C LayoutTests/inspector/styles-disable-then-enable.html => LayoutTests/inspector/styles-disable-then-delete.html M LayoutTests/ChangeLog M LayoutTests/inspector/elements-tests.js M LayoutTests/inspector/styles-disable-inherited.html A LayoutTests/inspector/styles-disable-then-delete-expected.txt M LayoutTests/inspector/styles-disable-then-enable.html M WebCore/ChangeLog M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/front-end/TestController.js Committed
r59381
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug