2010-05-13  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: A disabled style property cannot be deleted.

        https://bugs.webkit.org/show_bug.cgi?id=39057

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::applyStyleText):

2010-05-13  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: A disabled style property cannot be deleted.

        https://bugs.webkit.org/show_bug.cgi?id=39057

        * inspector/elements-tests.js:
        (frontend_getSelectedElementStyles):
        * inspector/styles-disable-then-delete-expected.txt: Added.
        * inspector/styles-disable-then-delete.html: Added.
        * inspector/styles-disable-then-enable.html:


Canonical link: https://commits.webkit.org/50570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59381 268f45cc-cd09-0410-ab3c-d52691b4dbfc