WebCore/inspector/InspectorDOMAgent.cpp
@@ -906,6 +906,11 @@ void InspectorDOMAgent::applyStyleText(long callId, long styleId, const String& 
         return;
     }
 
+    // Remove disabled property entry for property with given name. 
+    IdToDisabledStyleMap::iterator disabledIt = cssStore()->idToDisabledStyle.find(styleId);
+    if (disabledIt != cssStore()->idToDisabledStyle.end())
+        disabledIt->second.remove(propertyName);
+
     CSSStyleDeclaration* style = it->second.get();
     int styleTextLength = styleText.length();
 
@@ -973,6 +978,9 @@ void InspectorDOMAgent::applyStyleText(long callId, long styleId, const String& 
         // Set the property on the real style declaration.
         ExceptionCode ec = 0;
         style->setProperty(name, value, priority, ec);
+        // Remove disabled property entry for property with this name. 
+        if (disabledIt != cssStore()->idToDisabledStyle.end())
+            disabledIt->second.remove(name);
         changedProperties.append(name);
     }
     m_frontend->didApplyStyleText(callId, true, buildObjectForStyle(style, true), toArray(changedProperties));
